Some more typos.

--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -730,7 +730,7 @@ With these improved types our template doesn't change a lot, but the user experi
 
 The new template, thoroughly tested for user experience, will soon turn out to be good enough. But user experience is not the only way of checking whether the template makes sense. In our case, we could have arrived at the same conclusions from a completely different angle, which we will call \textit{evidence-based programming}.\footnote{This is a term I coined for the purpose of this thesis. Of course it is a pun on all the ``evidence-based X'', like evidence-based medicine or evidence-based policy.} It roughly corresponds to the part of our abstract about ``representing flow of information in a proof using types'', but we will consider the flow of information in a program, not a proof.
 
-Before we see how to use this new concept to improve our original template, we will first have to meet the problem it solves, called \textit{boolean blindness}, a dangerous disease that often afflicts programmers trasitioning from imperative to functional. We will also develop a conceptual framework which allows to understand these two in a deeper sense and link them with other related things, like the \textit{small-scale reflection} proof methodology or \textit{intrinsic and extrinsic typing} in lambda calculus.
+Before we see how to use this new concept to improve our original template, we will first have to meet the problem it solves, called \textit{boolean blindness}, a dangerous disease that often afflicts programmers transitioning from imperative to functional. We will also develop a conceptual framework which allows to understand these two in a deeper sense and link them with other related ideas, like the \textit{small-scale reflection} proof methodology or \textit{intrinsic and extrinsic typing} in lambda calculus.
 
 ``Boolean blindness''\footnote{The term was coined by Dan Licata in his lecture notes for an introductory functional programming class \cite{BBLicata}.} is an informal term used in the functional programming blogosphere to describe a few interrelated programming misconceptions and antipatterns. Robert Harper used it on his blog \cite{BBHarper} to name the erroneous view, held by some imperative programmers and classical mathematicians, that booleans and propositions are the same thing.\footnote{Note that it is only wrong to think that they are \textit{a priori} the same. If we assume classical logic and the Univalence Axiom, it is indeed the case that \m{bool = Prop}. For details see exercise 3.9 in \cite{HoTTBook}.} However, it is most often applied in quite different situations (see \cite{BBFairbank} for a more software-engineering-oriented presentation and \cite{BBHXA} for a perspective going beyond the booleans).
 
@@ -750,7 +750,7 @@ In Coq the difference between \m{bool} and \m{Prop} is very clear and hard to mi
 
 This is what has indeed happened to our initial template. We declared the return type of \m{short} to be \m{bool} and then branched on it in the definition of \m{qs}. This causes the information on shortness to not be present in the else branch, so that the only sensible domain for \m{choosePivot} is \m{list A}, which leads to problems with filling the template that we have already seen.
 
-How do we avoid making such mistakes in the future? To learn that, we have to look at the problem from a more general perspective first. One such perspective, which also encompasses many other phenomena, stems from making a distinction between implicit and explicit information.\footnote{The terms and the whole perspective are mine. I don't know if it appears anywhere in the literature.} A piece of information is explicit when it is backed by evidence\footnote{For the purpose of the current paragraph, ``evidence'' is basically synonymous with judgements of type theory, as presented in section \ref{mltt}} and implicit otherwise. This distinction can be likened to that between language and metalanguage or theory and metatheory: explicit information is information internal to the system (in our case, available inside Coq), whereas implicit information is information external to the system (in our case, available to us, but not necessarily to Coq).
+How do we avoid making such mistakes in the future? To learn that, we have to look at the problem from a more general perspective first. One such perspective, which also encompasses many other phenomena, stems from making a distinction between implicit and explicit information.\footnote{The terms and the whole perspective are mine. I don't know if it appears anywhere in the literature.} A piece of information is explicit when it is backed by evidence\footnote{For the purpose of the current paragraph, ``evidence'' is basically synonymous with judgements of type theory, as presented in section \ref{mltt}.} and implicit otherwise. This distinction can be likened to that between language and metalanguage or theory and metatheory: explicit information is information internal to the system (in our case, available inside Coq), whereas implicit information is information external to the system (in our case, available to us, but not necessarily to Coq).
 
 An example: the lists \m{[1; 2; 3]} and \m{[2; 3; 1]} are obviously permutations of each other, but given only this, the information stays implicit. If we also have a proof of \m{Permutation [1; 2; 3] [2; 3; 1]}, the information becomes explicit, with the proof being our evidence. Another example: if we pattern match on a list \m{l}, then in the \m{nil} branch we explicitly know that \m{l} is empty and the evidence is the fact that \m{l} and \m{nil} are convertible.\footnote{Recall that convertibility was explained in section \ref{convertible}.} In the \m{cons} case, we explicitly know that \m{l} is not empty and the evidence is the fact that \m{l} is convertible with \m{h\ ::\ t} where \m{h} is its head and \m{t} its tail.
 
@@ -764,7 +764,7 @@ From this perspective we can also understand \textit{small-scale reflection}\foo
 
 Let's say we have a predicate \m{Even\ :\ nat -> Prop} which represents the property of a natural number being even. It explicitly contains all the information on evenness, but it also takes a lot of memory and computing with it is rather slow. Small-scale reflection is a way of improving this situation by defining a function \m{even\ :\ nat -> bool}, which ``reflects'' the predicate \m{Even} -- \m{Even n} holds if and only if \m{even n = true}. Using \m{even} we can compute much faster and the proofs of \m{even n = true} occupy a negligible amount of memory. When we need the explicit information about \m{n} being even, we can recover it using \m{even}'s specification and use \m{Even n} as if we had it from the very beginning.
 
-Explicit and implicit information are not absolute concepts. Between these two extremes there are various degrees and shades of mixedness, with some (pieces of) information being explicit and other implicit. We can use these subtle shades to clearly see the, otherwise murky, purpose of the so-called ``hybrid types'' in Coq. An example is the type \m{sumor A P} (with \m{A\ :\ Type} and \m{P\ :\ Prop}), whose elements can be: either of the form \m{inleft a} for \m{a\ :\ A}, which we can interpret as successful computation results that don't carry any explicit information; or of the form \m{inright p} for \m{p\ :\ P}, which we can interpret as failures carrying explicit information -- a proof of a proposition which states what went wrong.
+Explicit and implicit information are not absolute concepts. Between these two extremes there are various degrees and shades of mixedness, with some (pieces of) information being explicit and others implicit. We can use these subtle shades to clearly see the, otherwise murky, purpose of the so-called ``hybrid types'' in Coq. An example is the type \m{sumor A P} (with \m{A\ :\ Type} and \m{P\ :\ Prop}), whose elements can be: either of the form \m{inleft a} for \m{a\ :\ A}, which we can interpret as successful computation results that don't carry any explicit information; or of the form \m{inright p} for \m{p\ :\ P}, which we can interpret as failures carrying explicit information -- a proof of a proposition which states what went wrong.
 
 Having come so far, we can now explain what evidence-based programming is: it is programming that incorporates considerations about information flow in the program into the design process. We can apply it to our algorithmic template as follows:
 
@@ -1008,7 +1008,7 @@ What changes drastically is the Haskell code extracted from \m{qs'}. Even though
 
 \chapter{Verificatio ex nihilo} \label{exnihilo}
 
-We are now ready to make the last step in our grand quest for formally verified algorithms: prove correctness of our template. Our approach to this task will be pretty similar to what we did when proving termination -- we will assume all the properties and lemmas we need and then put them together to get the correctness proof, leaving the concrete proofs  to the users of our algorithm. But as a conveniece for the users (and a sanity check for ourselves), we will provide a nice correctness proof for the default implementation.
+We are now ready to make the last step in our grand quest for formally verified algorithms -- in this chapter, we will prove correctness of our template. Our approach to this task will be pretty similar to what we did when proving termination -- we will assume all the properties and lemmas we need and then put them together to get the correctness proof, leaving the concrete proofs  to the users of our algorithm. But as a conveniece for the users (and a sanity check for ourselves), we will provide a nice correctness proof for the default implementation.
 
 \section{One induction to rule them all -- functional induction} \label{funind}
 
@@ -1093,7 +1093,7 @@ The last thing to do is proving the recursive equation, shown in the listing abo
 
 The proof is very easy -- we introduce assumptions into context and proceed by functional induction, using the principle we just derived. This needs to be done with \m{apply}, because \m{induction} doesn't understand our custom principle. In both cases we finish by rewriting some hypotheses. Note that the induction hypotheses were not necessary - a case analysis would be sufficient, but we don't have a ``functional case analysis principle'' and it's not worth to derive one.
 
-There is also yet another principle for reasoning about recursive functions that is not worth deriving, but which is nonetheless very easy to use in our current setup -- functional inversion. The need for functional inversion arises when we know the function's result and want to infer what arguments could have produced that result. Of course, when $f(x) = y$, then the set of all possible $x$s that could produce $y$ is $f^{-1}(y)$, the preimage of $y$ under $f$. But this is neither very useful nor what we usually want, particularly when dealing with recursive functions -- often we only want to know some basic facts about $x$, like which constructor it was made with.
+There is also yet another principle for reasoning about recursive functions that is not worth deriving, but which is nonetheless very easy to use in our current setup -- functional inversion. The need for functional inversion arises when we know the function's result and want to infer what arguments could have produced that result. Of course, when $f(x) = y$, the space of all possible $x$s that could have produced $y$ is $f^{-1}(y)$, the preimage of $y$ under $f$. But this is neither very useful nor what we usually want, particularly when dealing with recursive functions -- often we only want to know some basic facts about $x$, like which constructor it was made with.
 
 Functional inversion comes in handy in precisely these kinds of situations. Formulating a standalone functional inversion principle for a given function is a rather daunting task, wordy and clumsy (and it would most likely only obfuscate the matter at hand), but using such a principle is very simple. When we have a hypothesis \m{H : f x = y} and \m{R} is the inductively defined graph relation of \m{f}, we need to convert \m{H} to \m{H' : R x y} by using the correctness lemma of the graph and then perform an \m{inversion} on \m{H'}. This results in a kind of ``taking one step back in the evaluation of \m{f}'', which exposes all the possible forms of \m{x} that could have made \m{f x} compute to \m{y} directly (i.e. in one step).
 
@@ -1103,9 +1103,9 @@ But not all functions are as tame as quicksort -- some tougher classes of functi
 
 Another not-so-tame class of recursive functions that do not easily submit to our technique for deriving the functional induction principle are functions that exhibit \textit{higher-order recursion}, i.e. a situation in which the recursive calls are partially applied.\footnote{Coq can recognize basic functions of this kind (like \m{map} for a tree that can have a \m{list} of subtrees) as structurally recursive without any help from the user, but this relies on some heuristics in the termination checker and is not very reliable.} This time the problem is defining the inductive graph itself: we either have to define an additional inductive graph relation for each of the partially applied recursive calls\footnote{This is pretty much equivalent to the inductive graph of a variant of the function in which the higher-order recursive calls were replaced by first-order helper functions.} or at least an additional inductive graph relation for each function which takes the recursively defined function as argument. Either way this means a lot of additional work to be done, most of which is writing boring boilerplate code. In practice the situation is even worse than it sounds, because the automation we will see in section \ref{automate} often can't generate these definitions automatically.
 
-Before we finish, let's try to trace the history of functional induction. The term originated as a name for a Coq tactic in \cite{FunInd} and isn't widely known. Coq is most likely the only place where it is used -- searching Google for ``functional induction'' returns mostly Coq-related papers and Coq documentation pages intermixed with results in which the words ``functional'' and ``induction'' appear together but have unrelated meanings. The technique itself seems not to have a standard name and trying to look it up on Wikipedia is also hopeless.
+Before we finish, let's try to trace the history of functional induction. The term originated as a name for a Coq tactic in \cite{FunInd} and it isn't widely known. Coq is most likely the only place where it is used -- searching Google for ``functional induction'' returns mostly Coq-related papers and Coq documentation pages intermixed with results in which the words ``functional'' and ``induction'' appear together but have unrelated meanings. The technique itself seems not to have a standard name and trying to look it up on Wikipedia is also hopeless.
 
-The core idea, i.e. separating the concrete implementation of a function from reasoning about its input-output behaviour, was first described\footnote{This is the earliest example I could find.} by Burstall in \cite{Burstall}, but this work is not very well-known. Since then it was independently reinvented many times by many people, for example in \cite{Slind}, \cite{FromTheLeft} and \cite{Program}, which shows that the idea is quite intuitive and natural. In the context of Coq, the technique derived from the idea arose slowly in works that dealt with automating the definition of and reasoning about general recursive functions and culminated as an important part of the \m{Function} \cite{Function} command, a tool designed precisely for this purpose (although variants of the technique used there may differ from the one presented in this thesis).
+The core idea, i.e. separating the concrete implementation of a function from reasoning about its input-output behaviour, was first described\footnote{This is the earliest paper I could find.} by Burstall in \cite{Burstall}, but this work is not very well-known. Since then it was independently reinvented many times by many people, for example in \cite{Slind}, \cite{FromTheLeft} and \cite{Program}, which shows that the idea is quite intuitive and natural. In the context of Coq, the technique derived from the idea arose slowly in works that dealt with automating the definition of and reasoning about general recursive functions and culminated as an important part of the \m{Function} command \cite{Function}, a tool designed precisely for this purpose (although variants of the technique used there may differ from the one presented in this thesis).
 
 \section{Don't do this at home} \label{athome}
 
@@ -1364,7 +1364,7 @@ In Coq we can also use this approach as described above, at least as long as we 
 
 However, we (and the users of our algorithm template) are not confined to the simply typed \m{QSArgs} -- we also have additional guidance from the termination properties in \m{TerminatingQSArgs} and correctness properties in \m{VerifiedQSArgs}. The above concept/technique suggests that we should consider them all at once, instead of defining the concrete implementation in stages. What we end up with in such a case is precisely just an exercise in type-driven development -- as soon as we define any term of the appropriate type (i.e. \m{VerifiedQSArgs}), we are done.
 
-So, it turns out most of the sanity checks we did and most of our user experience quality assurance can be summarized as ``do some type-driven development and make sure it goes well''. In the end, if we were still worried about the quality of our work, we could do some more type-driven development to define another concrete or default implementation and see how it goes. We won't do this, however, as quicksort is too simple an algorithm to be worth putting so much effort into -- our concrete correctness proofs from \hyperref[sanity3]{previous section} are the ultimate evidence that we did a good job.
+So, it turns out most of the sanity checks we did and most of our user experience quality assurance can be summarized as ``do some type-driven development and make sure it goes well''. In the end, if we were still worried about the quality of our work, we could do some more type-driven development to define another concrete or default implementation and see how it goes. We won't do this, however, as quicksort is too simple an algorithm to be worth putting so much effort into -- our concrete correctness proofs from \hyperref[sanity3]{the previous section} are the ultimate evidence that we did a good job.
 
 To sum up our findings from the present chapter: hole-driven development, together with our idea of abstracting some holes away, naturally leads to programs that can be proven correct using proof by admission, and then finally we can recover concrete, fully correct implementations using type-driven development. These three techniques are intrinsically linked, yielding a perfect harmony.
 
